--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
     "cache-manager": "^2.1.2",
     "cache-manager-fs": "^1.0.5",
     "grind-core-frontend": "^0.4.2",
-    "grind-db": "^0.4.0",
-    "grind-orm": "^0.4.0",
-    "normalize.css": "^4.2.0",
-    "sqlite3": "^3.1.3"
+    "normalize.css": "^4.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
