Updated sass-lint settings

--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -1,5 +1,5 @@
 files:
-  include: '**/*.scss'
+  include: 'resources/assets/scss/**/*.scss'
 options:
   formatter: stylish
   merge-default-rules: false
@@ -25,7 +25,7 @@ rules:
     - include: true
   force-attribute-nesting: 1
   force-element-nesting: 1
-  force-pseudo-nesting: 1
+  force-pseudo-nesting: 0
   function-name-format:
     - 1
     - allow-leading-underscore: true
@@ -42,7 +42,9 @@ rules:
   indentation:
     - 0
     - size: 4
-  leading-zero: true
+  leading-zero:
+    - 1
+    - include: true
   mixin-name-format:
     - 1
     - allow-leading-underscore: true
@@ -62,7 +64,7 @@ rules:
   no-mergeable-selectors: 1
   no-misspelled-properties:
     - 1
-    - extra-properties: []
+    - extra-properties: [ ]
   no-qualifying-elements:
     - 1
     - allow-element-with-attribute: false
