--- a/bin/build
+++ b/bin/build
@@ -4,7 +4,7 @@ source ${0%/*}/.init
 
 strip_babel() {
 	cp "$1" "$1-tmp"
-	cat "$1-tmp" | sed 's/babel-node/node \-\-es_staging/g' > "$1"
+	cat "$1-tmp" | sed 's/babel-node/node/g' > "$1"
 	rm "$1-tmp"
 }
 
