--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "autoprefixer": "^6.6.1",
     "bourbon": "^4.2.7",
     "cache-manager": "^2.1.2",
+    "fs-promise": "^1.0.0",
     "github-slugger": "^1.1.1",
     "grind-core-frontend": "^0.5.1",
     "highlights": "^1.4.1",
