--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "bourbon": "^4.2.7",
     "cache-manager": "^2.1.2",
     "fs-promise": "^1.0.0",
-    "github-slugger": "^1.1.1",
     "grind-core-frontend": "^0.5.1",
     "highlights": "^1.4.1",
     "language-json5": "https://github.com/wiredmax/language-json5",
     "markdown-it": "^8.2.2",
+    "markdown-it-anchor": "^2.6.0",
     "markdown-it-expand-tabs": "^1.0.11",
     "markdown-it-task-lists": "^1.4.1"
   },
