--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "markdown-it": "^8.2.2",
     "markdown-it-anchor": "^2.6.0",
     "markdown-it-expand-tabs": "^1.0.11",
+    "markdown-it-table-of-contents": "^0.3.1",
     "markdown-it-task-lists": "^1.4.1"
   },
   "devDependencies": {
