--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,6 @@
 {
-	"presets": [ "es2016-node5", "stage-1" ],
+	"presets": [ "grind" ],
 	"plugins": [
-		"babel-plugin-import-auto-name",
-		"babel-plugin-transform-isnil",
 		[
 			"babel-plugin-module-alias", [
 				{ "src": "./app", "expose": "App" },
