--- a/bin/build
+++ b/bin/build
@@ -4,7 +4,13 @@ source ${0%/*}/.init
 
 strip_babel() {
 	cp "$1" "$1-tmp"
-	cat "$1-tmp" | sed 's/babel-node/node/g' > "$1"
+
+	if [ $(node -e 'console.log(Number.parseFloat(process.version.substring(1)) >= 7)') == "true" ]; then
+		cat "$1-tmp" | sed 's/babel-node/node/g' | sed 's/FLAGS=.*$/FLAGS="--harmony-async-await"/g' > "$1"
+	else
+		cat "$1-tmp" | sed 's/babel-node/node/g' | sed 's/FLAGS=.*$/FLAGS=""/g' > "$1"
+	fi
+
 	rm "$1-tmp"
 }
 
@@ -12,15 +18,15 @@ echo "Cleaning up old build"
 rm -fr build
 
 echo "Building"
+
 mkdir build build/app build/boot
 babel -s inline -d build/app/ app/
 babel -s inline -d build/boot/ boot/
 
 echo "Setting up bins"
 cp -R bin build/bin
-rm build/bin/build build/bin/lint build/bin/watch
+rm build/bin/build build/bin/lint
 
-strip_babel build/bin/serve
 strip_babel build/bin/cli
 chmod +x build/bin/* build/bin/.init
 
