--- a/package.json
+++ b/package.json
@@ -3,11 +3,8 @@
   "private": true,
   "dependencies": {
     "atom-jinja2": "https://github.com/danielchatfield/atom-jinja2",
-    "autoprefixer": "^6.6.1",
-    "bourbon": "^4.2.7",
     "cache-manager": "^2.1.2",
-    "fs-promise": "^1.0.0",
-    "grind-core-frontend": "^0.5.1",
+    "grind-core-frontend": "^0.6.0",
     "highlights": "^1.4.1",
     "language-json5": "https://github.com/wiredmax/language-json5",
     "markdown-it": "^8.2.2",
@@ -17,15 +14,14 @@
     "markdown-it-task-lists": "^1.4.1"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.0",
     "babel-cli": "^6.7.5",
     "babel-eslint": "^6.1.1",
-    "babel-plugin-import-auto-name": "^0.1.0",
-    "babel-plugin-module-alias": "^1.2.0",
-    "babel-plugin-transform-isnil": "0.0.5",
-    "babel-preset-es2016-node5": "^1.1.2",
-    "babel-preset-stage-1": "^6.5.0",
+    "babel-plugin-module-alias": "^1.6.0",
+    "babel-preset-grind": "^0.6.0",
     "babelify": "^7.3.0",
     "bootstrap-sass": "^3.3.7",
+    "bourbon": "^4.2.7",
     "browserify": "^13.1.0",
     "clean-css": "^3.4.19",
     "eslint": "^3.3.1",
@@ -37,6 +33,6 @@
     "uglify-js": "^2.7.0"
   },
   "engines": {
-    "node": ">=5.10 <7.0"
+    "node": ">=6.9"
   }
 }
