Upgraded to Grind 0.7 beta

--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "dependencies": {
     "atom-jinja2": "https://github.com/danielchatfield/atom-jinja2",
     "cache-manager": "^2.1.2",
-    "grind-core-frontend": "^0.6.0",
+    "grind-assets": "0.7.0-beta.2",
+    "grind-cache": "^0.6.0",
+    "grind-cli": "^0.6.0",
+    "grind-framework": "0.7.0-beta.3",
+    "grind-html": "0.7.0-beta.3",
+    "grind-nunjucks": "0.7.0-beta.2",
+    "grind-support": "0.7.0-beta.2",
+    "grind-view": "0.7.0-beta.1",
     "highlights": "^1.4.1",
     "language-blade": "https://github.com/jawee/language-blade",
     "language-json5": "https://github.com/wiredmax/language-json5",
