Switched to Stone templates

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "dependencies": {
     "atom-jinja2": "https://github.com/danielchatfield/atom-jinja2",
     "cache-manager": "^2.1.2",
-    "grind-assets": "0.7.0-beta.2",
+    "grind-assets": "0.7.0-beta.4",
     "grind-cache": "^0.6.0",
     "grind-cli": "^0.6.0",
     "grind-framework": "0.7.0-beta.3",
     "grind-html": "0.7.0-beta.3",
-    "grind-nunjucks": "0.7.0-beta.2",
+    "grind-stone": "0.7.0-beta.3",
     "grind-support": "0.7.0-beta.2",
     "grind-view": "0.7.0-beta.1",
     "highlights": "^1.4.1",
