--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "private": true,
   "dependencies": {
     "atom-jinja2": "https://github.com/danielchatfield/atom-jinja2",
-    "cache-manager": "^2.1.2",
-    "grind-assets": "0.7.0-beta.4",
-    "grind-cache": "^0.6.0",
-    "grind-cli": "^0.6.0",
-    "grind-framework": "0.7.0-beta.3",
-    "grind-html": "0.7.0-beta.3",
-    "grind-stone": "0.7.0-beta.4",
-    "grind-support": "0.7.0-beta.2",
-    "grind-view": "0.7.0-beta.1",
+    "autoprefixer": "^6.7.0",
+    "babel-preset-grind": "^0.6.0",
+    "bourbon": "^4.2.7",
+    "cache-manager": "^2.4.0",
+    "grind-assets": "^0.7.0",
+    "grind-cache": "^0.7.0",
+    "grind-cli": "^0.7.0",
+    "grind-framework": "^0.7.1",
+    "grind-html": "^0.7.1",
+    "grind-stone": "^0.7.0",
+    "grind-support": "^0.7.1",
+    "grind-view": "^0.7.0",
     "highlights": "^1.4.1",
     "language-blade": "https://github.com/jawee/language-blade",
     "language-json5": "https://github.com/wiredmax/language-json5",
@@ -23,22 +26,22 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.0",
-    "babel-cli": "^6.7.5",
-    "babel-eslint": "^6.1.1",
-    "babel-plugin-module-alias": "^1.6.0",
+    "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-plugin-module-resolver": "^2.7.1",
     "babel-preset-grind": "^0.6.0",
     "babelify": "^7.3.0",
     "bootstrap-sass": "^3.3.7",
     "bourbon": "^4.2.7",
-    "browserify": "^13.1.0",
-    "clean-css": "^3.4.19",
+    "browserify": "^14.4.0",
+    "clean-css": "^4.1.7",
     "eslint": "^3.3.1",
     "eslint-config-grind": "^2.0.0",
     "eslint-plugin-import-auto-name": "^1.0.3",
-    "node-sass": "^3.8.0",
+    "node-sass": "^4.5.3",
     "ouch": "^1.0.0",
-    "svgo": "^0.6.6",
-    "uglify-js": "^2.7.0"
+    "svgo": "^0.7.2",
+    "uglify-js": "^3.0.25"
   },
   "engines": {
     "node": ">=6.9"
