--- a/bin/build
+++ b/bin/build
@@ -4,13 +4,7 @@ source ${0%/*}/.init
 
 strip_babel() {
 	cp "$1" "$1-tmp"
-
-	if [ $(node -e 'console.log(Number.parseFloat(process.version.substring(1)) >= 7)') == "true" ]; then
-		cat "$1-tmp" | sed 's/babel-node/node/g' | sed 's/FLAGS=.*$/FLAGS="--harmony-async-await"/g' > "$1"
-	else
-		cat "$1-tmp" | sed 's/babel-node/node/g' | sed 's/FLAGS=.*$/FLAGS=""/g' > "$1"
-	fi
-
+	cat "$1-tmp" | sed "s/require('babel-register')//g" > "$1"
 	rm "$1-tmp"
 }
 
@@ -27,7 +21,8 @@ echo "Setting up bins"
 cp -R bin build/bin
 rm build/bin/build build/bin/lint
 
-strip_babel build/bin/cli
+strip_babel build/boot/Cli.js
+strip_babel build/boot/Http.js
 chmod +x build/bin/* build/bin/.init
 
 echo "Done"
