Replaced language-blade with language-stone in Highlighter

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "grind-support": "^0.7.1",
     "grind-view": "^0.7.0",
     "highlights": "^1.4.1",
-    "language-blade": "https://github.com/jawee/language-blade",
     "language-json5": "https://github.com/wiredmax/language-json5",
+    "language-stone": "https://github.com/grindjs/stone-editor-atom.git",
     "markdown-it": "^8.2.2",
     "markdown-it-anchor": "^2.6.0",
     "markdown-it-expand-tabs": "^1.0.11",
