--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "autoprefixer": "^6.7.0",
     "babel-preset-grind": "^0.6.0",
     "cache-manager": "^2.4.0",
+    "github": "^9.2.0",
     "grind-assets": "^0.7.0",
     "grind-cache": "^0.7.0",
     "grind-cli": "^0.7.0",
@@ -21,7 +22,8 @@
     "markdown-it-anchor": "^2.6.0",
     "markdown-it-expand-tabs": "^1.0.11",
     "markdown-it-table-of-contents": "^0.3.1",
-    "markdown-it-task-lists": "^1.4.1"
+    "markdown-it-task-lists": "^1.4.1",
+    "semver": "^5.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.0",
