--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
   "name": "grind-site",
+  "version": "0.8.0-beta.0",
   "private": true,
+  "scripts": {
+    "build": "grind-build",
+    "cli": "grind-boot",
+    "lint:js": "eslint app boot resources/assets/babel",
+    "lint:scss": "sass-lint --verbose --max-warnings=0 --no-exit"
+  },
   "dependencies": {
     "atom-jinja2": "https://github.com/danielchatfield/atom-jinja2",
     "autoprefixer": "^6.7.0",
-    "babel-preset-grind": "^0.6.0",
     "cache-manager": "^2.4.0",
     "github": "^9.2.0",
-    "grind-assets": "^0.7.0",
-    "grind-cache": "^0.7.0",
-    "grind-cli": "^0.7.0",
-    "grind-framework": "^0.7.1",
-    "grind-html": "^0.7.1",
-    "grind-stone": "^0.7.0",
-    "grind-support": "^0.7.1",
-    "grind-view": "^0.7.0",
-    "highlights": "^1.4.1",
+    "grind-assets": "^0.8.0-beta.14",
+    "grind-cache": "^0.8.0-beta.1",
+    "grind-cli": "^0.8.0-beta.1",
+    "grind-framework": "^0.8.0-beta.4",
+    "grind-html": "^0.8.0-beta.1",
+    "grind-stone": "^0.8.0-beta.9",
+    "grind-support": "^0.8.0-beta.6",
+    "grind-view": "^0.8.0-beta.2",
+    "highlights": "^3.1.4",
     "language-json5": "https://github.com/wiredmax/language-json5",
     "language-stone": "https://github.com/grindjs/stone-editor-atom.git",
     "markdown-it": "^8.2.2",
@@ -26,24 +32,31 @@
     "semver": "^5.3.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.0",
-    "babel-cli": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-plugin-module-resolver": "^2.7.1",
-    "babel-preset-grind": "^0.6.0",
-    "babelify": "^7.3.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/register": "^7.9.0",
+    "autoprefixer": "^9.7.6",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-transform-isnil": "^1.0.1",
+    "babel-preset-grind": "^0.8.0-beta.4",
+    "babelify": "^10.0.0",
     "bootstrap-sass": "^3.3.7",
-    "browserify": "^14.4.0",
-    "clean-css": "^4.1.7",
-    "eslint": "^3.3.1",
-    "eslint-config-grind": "^2.0.0",
-    "eslint-plugin-import-auto-name": "^1.0.3",
-    "node-sass": "^4.5.3",
-    "ouch": "^1.0.0",
-    "svgo": "^0.7.2",
-    "uglify-js": "^3.0.25"
+    "browserify": "^16.5.1",
+    "clean-css": "^4.2.3",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import-auto-name": "^1.1.0",
+    "grind-scripts": "^0.8.0-beta.0",
+    "node-sass": "^4.14.0",
+    "normalize.css": "^8.0.1",
+    "ouch": "^2.0.0",
+    "sass-lint": "^1.13.1",
+    "svgo": "^1.3.2",
+    "uglify-js": "^3.9.1",
+    "ws": "^7.2.5"
   },
   "engines": {
-    "node": ">=6.9"
+    "node": ">=10.13"
   }
 }
