--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "atom-jinja2": "https://github.com/danielchatfield/atom-jinja2",
     "autoprefixer": "^6.7.0",
+    "bootstrap-sass": "^3.3.7",
     "cache-manager": "^2.4.0",
     "github": "^9.2.0",
     "grind-assets": "^0.8.0-beta.15",
@@ -18,6 +19,7 @@
     "grind-cli": "^0.8.0-beta.15",
     "grind-framework": "^0.8.0-beta.15",
     "grind-html": "^0.8.0-beta.15",
+    "grind-http": "^0.8.0-beta.15",
     "grind-stone": "^0.8.0-beta.15",
     "grind-support": "^0.8.0-beta.15",
     "grind-view": "^0.8.0-beta.15",
@@ -29,6 +31,8 @@
     "markdown-it-expand-tabs": "^1.0.11",
     "markdown-it-table-of-contents": "^0.3.1",
     "markdown-it-task-lists": "^1.4.1",
+    "normalize.css": "^8.0.1",
+    "ouch": "^2.0.0",
     "semver": "^5.3.0"
   },
   "devDependencies": {
@@ -42,15 +46,12 @@
     "babel-plugin-transform-isnil": "^1.0.1",
     "babel-preset-grind": "^0.8.0-beta.4",
     "babelify": "^10.0.0",
-    "bootstrap-sass": "^3.3.7",
     "browserify": "^16.5.1",
     "clean-css": "^4.2.3",
     "eslint": "^6.8.0",
     "eslint-plugin-import-auto-name": "^1.1.0",
     "grind-scripts": "^0.8.0-beta.15",
     "node-sass": "^4.14.0",
-    "normalize.css": "^8.0.1",
-    "ouch": "^2.0.0",
     "sass-lint": "^1.13.1",
     "svgo": "^1.3.2",
     "uglify-js": "^3.9.1",
