--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grind-site",
-  "version": "0.8.0-beta.15",
+  "version": "0.8.0",
   "private": true,
   "scripts": {
     "build": "grind-build",
@@ -14,15 +14,15 @@
     "bootstrap-sass": "^3.3.7",
     "cache-manager": "^2.4.0",
     "github": "^9.2.0",
-    "grind-assets": "^0.8.0-beta.15",
-    "grind-cache": "^0.8.0-beta.15",
-    "grind-cli": "^0.8.0-beta.15",
-    "grind-framework": "^0.8.0-beta.15",
-    "grind-html": "^0.8.0-beta.15",
-    "grind-http": "^0.8.0-beta.15",
-    "grind-stone": "^0.8.0-beta.15",
-    "grind-support": "^0.8.0-beta.15",
-    "grind-view": "^0.8.0-beta.15",
+    "grind-assets": "^0.8.0",
+    "grind-cache": "^0.8.0",
+    "grind-cli": "^0.8.0",
+    "grind-framework": "^0.8.0",
+    "grind-html": "^0.8.0",
+    "grind-http": "^0.8.0",
+    "grind-stone": "^0.8.0",
+    "grind-support": "^0.8.0",
+    "grind-view": "^0.8.0",
     "highlights": "^3.1.4",
     "language-json5": "https://github.com/wiredmax/language-json5",
     "language-stone": "https://github.com/grindjs/stone-editor-atom.git",
@@ -50,7 +50,7 @@
     "clean-css": "^4.2.3",
     "eslint": "^6.8.0",
     "eslint-plugin-import-auto-name": "^1.1.0",
-    "grind-scripts": "^0.8.0-beta.15",
+    "grind-scripts": "^0.8.0",
     "node-sass": "^4.14.0",
     "sass-lint": "^1.13.1",
     "svgo": "^1.3.2",
